# uastar

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
libs/bitmap/: bitmap_image.hpp
src/: main.cpp  problem.hpp  utils.hpp  vec2.hpp
src/pathway/: CPU-solver.cpp  CPU-solver.hpp  GPU-kernel.cuh  GPU-solver.cu  GPU-solver.hpp  input.hpp  pathway.cpp  pathway.hpp
src/pathway/input/: custom.cpp  custom.hpp  zigzag.cpp  zigzag.hpp
src/puzzle/: CPU-solver.hpp  GPU-kernel.cuh  GPU-solver.cu  GPU-solver.cuh  database.cpp  database.hpp  puzzle.cpp  puzzle.cu  puzzle.cuh  puzzle.hpp  storage.hpp
utils/: modern-sort.cu  slider.py
